# src/app.js
@@ -1,6 +1,5 @@
 import express from "express";
-import serverless from "serverless-http";
-import user from "./controllers/passenger.js";
+import passenger from "./controllers/passenger.js";
 import cors from "cors";
 import swaggerUi from "swagger-ui-express";
 import swaggerDocument from "./docs/swagger.json";
@@ -11,8 +10,9 @@ app.use(cors());
 
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-app.use("/user", user);
+app.use("/passenger", passenger);
 
+// Errors request - Put in a middleware
 app.use((req, res, next) => {
   res.status(404).send();
 });
@@ -20,5 +20,3 @@ app.use((req, res, next) => {
 app.use((req, res, next) => {
   res.status(err.status || 500).send();
 });
-
-export const handler = serverless(app);
